--- a/css/footer/__link/footer__link.css
+++ b/css/footer/__link/footer__link.css
@@ -1,3 +1,12 @@
 .footer__link {
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+    block-size: 28px;
+    inline-size: 28px;
+
+    border-radius: 50%;
+    border: 0.8px solid var(--color-text-main);
 }
